Fix scroll issue caused by markdown spacing fix

--- a/static/main.css
+++ b/static/main.css
@@ -195,9 +195,9 @@ div.scrollable {
     max-height: 250px;
     white-space: pre-wrap;
 }
-div.notes {
-    margin-bottom: calc(5px - 1rem);
-}
 div.notes p {
     display: inline-block;
+}
+div.notes p:last-child {
+    margin-bottom: 0;
 }
